Make code backward compatible with JDK 8